java: Set release version to 17 (#140)
* Set default release version to 17
* Enable Error prone with Nullaway
* Enable Checkstyle